--- a/About/about.html
+++ b/About/about.html
@@ -87,7 +87,7 @@
       <h2>Propulsion</h2>Embarking on an awe-inspiring journey into the skies, we have set our sights on designing and
       crafting a formidable Solid Rocket Motor (SRM) that will propel us to new heights, quite literally! Our mission is
       nothing short of exhilarating: to soar to an impressive altitude of 1,000 feet, all while harnessing a total
-      impulse range between 9,000 and 12,000 Newton-seconds.
+      impulse of 3713 Newton-seconds.
     </div>
   </div>
 
