--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Team Aether</title>
 
   <meta name="description"
-    content="Team Rocketry DTU: India's top model rocketry group aiming for victory at Spaceport America Cup 2024, the premier international college rocketry competition." />
+    content="Team Aether Rocketry: India's top High Power rocketry group." />
 
   <meta property="og:title" content="Team Aether, student team at Manipal Institute of Technology" />
   <meta property="og:type" content="home page" />
@@ -15,10 +15,10 @@
   <meta property="og:image"
     content="https://images.unsplash.com/photo-1517976487492-5750f3195933?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cm9ja2V0JTIwbGF1bmNofGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" />
   <meta property="og:desciption"
-    content="Team Rocketry DTU: India's top model rocketry group aiming for victory at Spaceport America Cup 2024, the premier international college rocketry competition." />
+    content="Team Aether Rocketry: India's top High Power rocketry group. Discover our ambitious rocketry group, dedicated to building high-power rockets reaching apogees of 1000 meters. With precision engineering and relentless innovation, we push the boundaries of rocket technology, fueled by our passion for exploration and discovery. Join us as we soar towards the stars, one rocket at a time." />
 
   <link rel="icon" type="image/x-icon" href="..\assets\rocketryLogo.jpeg" />
-  <link rel="canonical" href="https://www.rocketrydtu.com/" />
+  <link rel="canonical" href="" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
