--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:desciption"
     content="Team Aether Rocketry: India's top High Power rocketry group. Discover our ambitious rocketry group, dedicated to building high-power rockets reaching apogees of 1000 meters. With precision engineering and relentless innovation, we push the boundaries of rocket technology, fueled by our passion for exploration and discovery. Join us as we soar towards the stars, one rocket at a time." />
 
-  <link rel="icon" type="image/x-icon" href="..\assets\rocketryLogo.jpeg" />
+  <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/FHKPjprL/faviconr.png" />
   <link rel="canonical" href="" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
