--- a/Team/team.html
+++ b/Team/team.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="team page">
   <meta property="og:url" content="">
 
-  <link rel="icon" type="image/x-icon" href="../assets/rocketryLogo.jpeg">
+  <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/FHKPjprL/faviconr.png">
   <link rel=“canonical” href="">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
