--- a/About/about.html
+++ b/About/about.html
@@ -11,12 +11,12 @@
     Propulsion, Aerostructures, Recovery, Corporate, and Public Relations, each contributing their unique 
     expertise to our mission." />
 
-  <meta property="og:title" content="Team Rocketry DTU about page" />
+  <meta property="og:title" content="Team Aether Rocketry" />
   <meta property="og:type" content="about page" />
-  <meta property="og:url" content="https://www.rocketrydtu.com/About/" />
+  <meta property="og:url" content="" />
   <meta property="og:image"
     content="https://images.unsplash.com/photo-1457364887197-9150188c107b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cm9ja2V0fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" />
-  <meta property="og:description" content="Team Rocketry DTU comprises specialised departments, each playing 
+  <meta property="og:description" content="Team Aether Rocketry comprises specialised departments, each playing 
     a pivotal role in establishing the strong foundation of our team. These distinct departments include Avionics, 
     Propulsion, Aerostructures, Recovery, Corporate, and Public Relations, each contributing their unique 
     expertise to our mission." />
@@ -33,7 +33,7 @@
   </div>
   <nav class="navbar">
     <!-- LOGO -->
-    <div class="logo"><img alt="rocketryLogo" src="../assets/rocketryLogo.png"></div>
+    <div class="logo"><img alt="rocketryLogo" src="https://i.postimg.cc/FHKPjprL/faviconr.png"></div>
 
     <!-- NAVIGATION MENU -->
     <ul class="nav-links">
