--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Team Rocketry DTU's contact page for any queries or feedback from viewers'</title>
+  <title>Team Aether Rocketry's contact page for any queries or feedback from viewers'</title>
   <meta name="description" content="Contact Our Team - Reach out to us with your questions, feedback, or 
     inquiries. We're here to assist you. Contact us via email through our convenient online form. Stay connected 
     and visit us in person during our business hours. Your input is valuable to us">
