--- a/About/about.html
+++ b/About/about.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Team's departments that work together to create model rockets</title>
 
-  <meta name="description" content="Team Rocketry DTU comprises specialised departments, each playing 
+  <meta name="description" content="Team Aether Rocketry comprises specialised departments, each playing 
     a pivotal role in establishing the strong foundation of our team. These distinct departments include Avionics, 
-    Propulsion, Aerostructures, Recovery, Corporate, and Public Relations, each contributing their unique 
+    Propulsion, Aerostructures, Payload and Management each contributing their unique 
     expertise to our mission." />
 
   <meta property="og:title" content="Team Aether Rocketry" />
@@ -33,7 +33,7 @@
   </div>
   <nav class="navbar">
     <!-- LOGO -->
-    <div class="logo"><img alt="rocketryLogo" src="https://i.postimg.cc/FHKPjprL/faviconr.png"></div>
+    <div class="logo"><img alt="rocketryLogo" src="..\assets\rocketryLogo.jpeg"></div>
 
     <!-- NAVIGATION MENU -->
     <ul class="nav-links">
