--- a/About/about.html
+++ b/About/about.html
@@ -33,7 +33,7 @@
   </div>
   <nav class="navbar">
     <!-- LOGO -->
-    <div class="logo"><img alt="rocketryLogo" src="..\assets\rocketryLogo.jpeg"></div>
+    <div class="logo"><img alt="rocketryLogo" src="https://tejas2510.github.io/subscale-website/assets/rocketryLogo.png"></div>
 
     <!-- NAVIGATION MENU -->
     <ul class="nav-links">
